# flashcards-prototype

./: .gitignore  README.md  pyproject.toml
flashcards/models/: __init__.py  card.py  common.py  example.py  target.py
flashcards/prompts/: contextual.json
flashcards/services/: storage.py
project-specs/: development_plan.md  flashcard_app_spec.md
tests/: test_models.py  test_storage.py
